// Vitest Snapshot v1

exports[`MatchSnapShot test App 1`] = `
<div>
  <div
    className="div--headernav"
    data-testid="testId"
  >
    <nav
      className="navbar--nav"
    >
      <div
        className="div--imgnavbar"
      >
        <img
          alt="no-img-navbar"
          className="img--koala"
          height="70px"
          src="/src/assets/logo/koala_tree.png"
          width="65px"
        />
      </div>
      <ul
        className="ul--navbar"
      >
        <li>
          <a
            className="link--tagnav"
            data-testid="firstLink"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="secondlink"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="thirdlink"
            href="/online"
            onClick={[Function]}
          >
            Online
          </a>
        </li>
      </ul>
      <div
        className="div--userloginnavbar"
      >
        <div
          className="div--userplace"
        >
          <span
            className="span--usrnavbar"
          >
            ↦
          </span>
        </div>
        <div
          className="div--login"
        >
          <span
            className="span--navbarlogin"
          >
            <a
              className="link--logout"
              data-testid="linkLogout"
              href="/login"
              onClick={[Function]}
            >
              Logout
            </a>
          </span>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="div--home"
  >
    <div>
      <img
        alt="/src/assets/logo/chat-logobg.png"
        className="img--home"
        height="1080px"
        src="/src/assets/logo/chat-logobg.png"
        width="1920px"
      />
    </div>
    <div
      className="wallIntro"
    >
      <h1
        className="wallIntro--h1"
      >
        Chat-Society
      </h1>
    </div>
    <div
      className="div--voletsRight"
    >
      <button
        className="btn--voletRight"
        onClick={[Function]}
      >
        Computing
      </button>
      <div
        className="computinganim"
      >
        <h1>
          Computing
        </h1>
      </div>
    </div>
    <div
      className="div--voletsLeft"
    >
      <button
        className="btn--voletLeft"
        onClick={[Function]}
      >
        Chat-Room
      </button>
      <div
        className="webdevanim"
      >
        <h1>
          Chat-Room
        </h1>
      </div>
    </div>
    <div>
      <div
        className="volet--R2"
      >
        <div
          className="subvolet--R2"
        >
          <button
            className="btn--voletr"
            onClick={[Function]}
          >
            X
          </button>
          <p>
            Chat Computing
          </p>
          <img
            alt="no img volet-R 2"
            height="140px"
            src="/src/assets/background/motherboard.png"
            width="240px"
          />
          <section
            className="section--voletr"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        className="volet--L2"
      >
        <div
          className="subvolet--L2"
        >
          <button
            className="btn--volet"
            onClick={[Function]}
          >
            X
          </button>
          <p>
            Private Chat
          </p>
          <span
            className="span"
          >
            <svg
              fill="currentColor"
              height={64}
              stroke="currentColor"
              strokeWidth="0"
              style={
                {
                  "color": undefined,
                }
              }
              viewBox="0 0 16 16"
              width={64}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
              />
            </svg>
          </span>
          <div
            className="form--search"
          >
            <input
              className="search--input"
              onChange={[Function]}
              placeholder="Search by firstname"
              type="text"
              value={[]}
            />
            <button
              className="btn--search"
              onClick={[Function]}
            >
              Enter
            </button>
          </div>
          <section
            className="section--voletl"
          />
        </div>
      </div>
    </div>
    <div
      className="maintitle"
    >
      <h1
        className="main--h1"
      >
        Chat-Society
      </h1>
      <h2
        className="main--h2"
      >
        Login and Chat !
      </h2>
      <h4
        className="main--h4"
      >
        (Only for Stack-Society Members)
      </h4>
    </div>
    <div
      className="master--maincomp"
    >
      <div
        className="bg--colormaincomp"
      >
        <h2
          className="h2--maincomp"
        >
          All Members : 
          <span
            className="span--lengthuser"
          >
            0
          </span>
        </h2>
        <h3
          className="h3--maincomp"
        >
          Users online (connected) : 
          <span
            style={
              {
                "color": "pink",
              }
            }
          >
            0
          </span>
        </h3>
        <div />
      </div>
    </div>
    <div
      className="div--navfooter"
    >
      <nav
        className="navbar--nav"
      >
        <ul
          className="navbar--ul"
        >
          <li
            className="navbar--li"
          >
            Contact
          </li>
          <li
            className="navbar--li"
          >
            Info
          </li>
          <li
            className="navbar--li"
          >
            Sponsors
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`MatchSnapShot test ChatComputer 1`] = `
<div>
  <div
    className="div--headernav"
    data-testid="testId"
  >
    <nav
      className="navbar--nav"
    >
      <div
        className="div--imgnavbar"
      >
        <img
          alt="no-img-navbar"
          className="img--koala"
          height="70px"
          src="/src/assets/logo/koala_tree.png"
          width="65px"
        />
      </div>
      <ul
        className="ul--navbar"
      >
        <li>
          <a
            className="link--tagnav"
            data-testid="firstLink"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="secondlink"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="thirdlink"
            href="/online"
            onClick={[Function]}
          >
            Online
          </a>
        </li>
      </ul>
      <div
        className="div--userloginnavbar"
      >
        <div
          className="div--userplace"
        >
          <span
            className="span--usrnavbar"
          >
            ↦
          </span>
        </div>
        <div
          className="div--login"
        >
          <span
            className="span--navbarlogin"
          >
            <a
              className="link--logout"
              data-testid="linkLogout"
              href="/login"
              onClick={[Function]}
            >
              Logout
            </a>
          </span>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="bg--loginimg"
    data-testid="logintest"
  >
    <div
      className="zoom--img"
    >
      <img
        alt="/src/assets/background/circle.jpg"
        className="img--login"
        height="100%"
        src="/src/assets/background/circle.jpg"
        width="100%"
      />
    </div>
    <div
      className="div--submit"
    >
      <form
        className="submit"
        data-testid="formlog"
        onSubmit={[Function]}
        placeholder="lastname"
      >
        <h1
          className="title--framelogin"
        >
          Login
        </h1>
        <div
          className="form-group"
        >
          <div
            className="error--message"
          >
            Not connected!
          </div>
        </div>
        <label
          className="lbl--login"
          htmlFor="username"
        >
          Username
        </label>
        <input
          autoComplete="off"
          className="input--login"
          name="username"
          onChange={[Function]}
          placeholder="username"
          required={true}
          type="text"
          value=""
        />
        <label
          className="lbl--login"
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="input--login"
          name="password"
          onChange={[Function]}
          placeholder="password"
          required={true}
          type="password"
          value=""
        />
        <button
          className="btn--submitlogin"
          type="submit"
        >
          Enter
        </button>
        <p
          className="p--loginframe"
        >
          <a
            className="link--subscribe"
            data-testid="linktosub"
            href="/subscribe"
            onClick={[Function]}
          >
            Subscribe
          </a>
        </p>
      </form>
    </div>
  </div>
</div>
`;

exports[`MatchSnapShot test ComputerRoom 1`] = `
<div>
  <div
    className="div--headernav"
    data-testid="testId"
  >
    <nav
      className="navbar--nav"
    >
      <div
        className="div--imgnavbar"
      >
        <img
          alt="no-img-navbar"
          className="img--koala"
          height="70px"
          src="/src/assets/logo/koala_tree.png"
          width="65px"
        />
      </div>
      <ul
        className="ul--navbar"
      >
        <li>
          <a
            className="link--tagnav"
            data-testid="firstLink"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="secondlink"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="thirdlink"
            href="/online"
            onClick={[Function]}
          >
            Online
          </a>
        </li>
      </ul>
      <div
        className="div--userloginnavbar"
      >
        <div
          className="div--userplace"
        >
          <span
            className="span--usrnavbar"
          >
            ↦
          </span>
        </div>
        <div
          className="div--login"
        >
          <span
            className="span--navbarlogin"
          >
            <a
              className="link--logout"
              data-testid="linkLogout"
              href="/login"
              onClick={[Function]}
            >
              Logout
            </a>
          </span>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`MatchSnapShot test Home 1`] = `
<div>
  <div
    className="div--headernav"
    data-testid="testId"
  >
    <nav
      className="navbar--nav"
    >
      <div
        className="div--imgnavbar"
      >
        <img
          alt="no-img-navbar"
          className="img--koala"
          height="70px"
          src="/src/assets/logo/koala_tree.png"
          width="65px"
        />
      </div>
      <ul
        className="ul--navbar"
      >
        <li>
          <a
            className="link--tagnav"
            data-testid="firstLink"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="secondlink"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="thirdlink"
            href="/online"
            onClick={[Function]}
          >
            Online
          </a>
        </li>
      </ul>
      <div
        className="div--userloginnavbar"
      >
        <div
          className="div--userplace"
        >
          <span
            className="span--usrnavbar"
          >
            ↦
          </span>
        </div>
        <div
          className="div--login"
        >
          <span
            className="span--navbarlogin"
          >
            <a
              className="link--logout"
              data-testid="linkLogout"
              href="/login"
              onClick={[Function]}
            >
              Logout
            </a>
          </span>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="div--home"
  >
    <div>
      <img
        alt="/src/assets/logo/chat-logobg.png"
        className="img--home"
        height="1080px"
        src="/src/assets/logo/chat-logobg.png"
        width="1920px"
      />
    </div>
    <div
      className="wallIntro"
    >
      <h1
        className="wallIntro--h1"
      >
        Chat-Society
      </h1>
    </div>
    <div
      className="div--voletsRight"
    >
      <button
        className="btn--voletRight"
        onClick={[Function]}
      >
        Computing
      </button>
      <div
        className="computinganim"
      >
        <h1>
          Computing
        </h1>
      </div>
    </div>
    <div
      className="div--voletsLeft"
    >
      <button
        className="btn--voletLeft"
        onClick={[Function]}
      >
        Chat-Room
      </button>
      <div
        className="webdevanim"
      >
        <h1>
          Chat-Room
        </h1>
      </div>
    </div>
    <div>
      <div
        className="volet--R2"
      >
        <div
          className="subvolet--R2"
        >
          <button
            className="btn--voletr"
            onClick={[Function]}
          >
            X
          </button>
          <p>
            Chat Computing
          </p>
          <img
            alt="no img volet-R 2"
            height="140px"
            src="/src/assets/background/motherboard.png"
            width="240px"
          />
          <section
            className="section--voletr"
          >
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/1"
                onClick={[Function]}
              >
                Hard Disk - SSD
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.5 11a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zM3 10.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
                    />
                    <path
                      d="M16 11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V9.51c0-.418.105-.83.305-1.197l2.472-4.531A1.5 1.5 0 0 1 4.094 3h7.812a1.5 1.5 0 0 1 1.317.782l2.472 4.53c.2.368.305.78.305 1.198V11zM3.655 4.26 1.592 8.043C1.724 8.014 1.86 8 2 8h12c.14 0 .276.014.408.042L12.345 4.26a.5.5 0 0 0-.439-.26H4.094a.5.5 0 0 0-.44.26zM1 10v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-1a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1z"
                    />
                  </svg>
                </div>
              </span>
            </li>
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/2"
                onClick={[Function]}
              >
                CPU
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.5 6a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"
                    />
                    <path
                      d="M5.5.5a.5.5 0 0 0-1 0V2A2.5 2.5 0 0 0 2 4.5H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2A2.5 2.5 0 0 0 4.5 14v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14a2.5 2.5 0 0 0 2.5-2.5h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14A2.5 2.5 0 0 0 11.5 2V.5a.5.5 0 0 0-1 0V2h-1V.5a.5.5 0 0 0-1 0V2h-1V.5a.5.5 0 0 0-1 0V2h-1V.5zm1 4.5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5v-3A1.5 1.5 0 0 1 6.5 5z"
                    />
                  </svg>
                </div>
              </span>
            </li>
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/3"
                onClick={[Function]}
              >
                RAM
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 640 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M640 130.94V96c0-17.67-14.33-32-32-32H32C14.33 64 0 78.33 0 96v34.94c18.6 6.61 32 24.19 32 45.06s-13.4 38.45-32 45.06V320h640v-98.94c-18.6-6.61-32-24.19-32-45.06s13.4-38.45 32-45.06zM224 256h-64V128h64v128zm128 0h-64V128h64v128zm128 0h-64V128h64v128zM0 448h64v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h64v-96H0v96z"
                    />
                  </svg>
                </div>
              </span>
            </li>
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/4"
                onClick={[Function]}
              >
                Drivers
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M228.844 32.22v114.218h17.687V32.218h-17.686zm-108.25.624c-15.507 0-28.094 12.586-28.094 28.093C92.5 76.444 105.087 89 120.594 89c12.655 0 23.34-8.372 26.844-19.875h44.937v77.313h17.688v-95H147.03c-3.888-10.837-14.262-18.593-26.436-18.593zm193.25 0c-15.507 0-28.063 12.586-28.063 28.093 0 12.124 7.677 22.45 18.44 26.376v59.124h17.655V87.844c11.596-3.452 20.063-14.193 20.063-26.906 0-15.508-12.587-28.094-28.094-28.094zM266.124 92.5v53.938h17.657V92.5h-17.655zm188.532 4.03c-15.507 0-28.094 12.588-28.094 28.095 0 13.083 8.948 24.074 21.063 27.188v27.468h-92.938v17.657h110.624v-46.342c10.223-4.192 17.407-14.233 17.407-25.97 0-15.507-12.557-28.094-28.064-28.094zM30.187 123.657v17.688H96.75v55.594h62.814V179.28h-45.126v-55.624h-84.25zm147.032 40.47v159.718h159.81v-159.72H177.22zm17.56 15.655h17.657v78.595l32.407 32.406h75.28v17.658H237.5l-2.594-2.594-10.75-10.75c-1.033 7.385-7.36 13.062-15.03 13.062-8.392 0-15.19-6.796-15.19-15.187 0-7.682 5.696-13.98 13.095-15l-9.655-9.658-2.594-2.593V179.78zm54.94.157h17.686v55.313h52.53l.002 17.688H249.72v-73zM53.124 217.375V307.344c-11.49 3.512-19.844 14.198-19.844 26.844 0 15.505 12.557 28.093 28.064 28.093s28.093-12.587 28.093-28.092c0-12.195-7.79-22.564-18.656-26.438v-72.72h88.782v-17.655H53.124zm301.563 0v17.656h53.968v-17.655h-53.97zm99.968 21.97c-10.898 0-20.342 6.21-25 15.28h-74.97l.002 17.688H427c2.325 13.168 13.824 23.187 27.656 23.187 15.507 0 28.063-12.588 28.063-28.094 0-15.507-12.557-28.062-28.064-28.062zm-349.062 15.28v17.688h53.97v-17.688h-53.97zm17.156 36.47v84.217c-11.498 3.513-19.875 14.2-19.875 26.844 0 15.506 12.587 28.094 28.094 28.094 15.506 0 28.06-12.588 28.06-28.094 0-12.194-7.766-22.564-18.624-26.437v-66.94h19.156v-17.686H122.75zm231.938 0v17.686h45.156v95.283c-11.323 3.624-19.53 14.26-19.53 26.78-.002 15.506 12.585 28.063 28.092 28.063 15.507 0 28.063-12.557 28.063-28.062 0-12.32-7.935-22.778-18.97-26.563V291.095h-62.814zM192.375 341.53v54.033h17.688V341.53h-17.688zm36.47 0v86.564c-11.013 3.794-18.94 14.233-18.94 26.53 0 15.506 12.588 28.095 28.095 28.095s28.063-12.59 28.063-28.095c0-12.53-8.203-23.14-19.532-26.75V341.53h-17.686zm37.28 0v54.033h17.688l-.032-54.032h-17.655zm38.094 0v140.064h17.655V341.53H304.22z"
                    />
                  </svg>
                </div>
              </span>
            </li>
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/5"
                onClick={[Function]}
              >
                Systemd
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    role="img"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title />
                    <path
                      d="M1.8 0C.806 0 0 .805 0 1.8v20.4c0 .995.805 1.8 1.8 1.8h20.4c.995 0 1.8-.805 1.8-1.8V1.8c0-.995-.805-1.8-1.8-1.8H1.8zm10.223 4.39l9.29 15.098-9.29-9.82-9.351 9.82 9.351-15.097zm0 7.583l1.633 1.691h-3.285l1.652-1.691zM9.31 14.762h5.41l1.496 1.574H7.813l1.496-1.574z"
                    />
                  </svg>
                </div>
              </span>
            </li>
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/6"
                onClick={[Function]}
              >
                Process
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clipRule="evenodd"
                      d="M1.5 2h13l.5.5V9h-1V6H2v7h7v1H1.5l-.5-.5v-11l.5-.5zM2 5h12V3H2v2zm5 7v-1.094a1.633 1.633 0 0 1-.469-.265l-.945.539-.5-.86.937-.547a1.57 1.57 0 0 1 0-.547l-.937-.546.5-.86.945.54c.151-.12.308-.209.469-.266V7h1v1.094a1.48 1.48 0 0 1 .469.265l.945-.539.5.86-.937.547a1.57 1.57 0 0 1 0 .546l.937.547-.5.86-.945-.54a1.807 1.807 0 0 1-.469.266V12H7zm-.25-2.5c0 .208.073.385.219.531a.723.723 0 0 0 .531.219.723.723 0 0 0 .531-.219.723.723 0 0 0 .219-.531.723.723 0 0 0-.219-.531.723.723 0 0 0-.531-.219.723.723 0 0 0-.531.219.723.723 0 0 0-.219.531zm5.334 5.5v-1.094a1.634 1.634 0 0 1-.469-.265l-.945.539-.5-.86.938-.547a1.572 1.572 0 0 1 0-.547l-.938-.546.5-.86.945.54c.151-.12.308-.209.47-.266V10h1v1.094a1.486 1.486 0 0 1 .468.265l.945-.539.5.86-.937.547a1.562 1.562 0 0 1 0 .546l.937.547-.5.86-.945-.54a1.806 1.806 0 0 1-.469.266V15h-1zm-.25-2.5c0 .208.073.385.219.531a.723.723 0 0 0 .531.219.723.723 0 0 0 .531-.219.723.723 0 0 0 .22-.531.723.723 0 0 0-.22-.531.723.723 0 0 0-.53-.219.723.723 0 0 0-.532.219.723.723 0 0 0-.219.531z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </span>
            </li>
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/7"
                onClick={[Function]}
              >
                Client-Server
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M41 25v78h430V25H41zm254 23h18v32h-18V48zm121 0a16 16 0 0 1 16 16 16 16 0 0 1-16 16 16 16 0 0 1-16-16 16 16 0 0 1 16-16zM64 55h48v18H64V55zm80 0h48v18h-48V55zm80 0h48v18h-48V55zm-119 66v30h302v-30H105zm-64 48v78h430v-78H41zm254 23h18v32h-18v-32zm121 0a16 16 0 0 1 16 16 16 16 0 0 1-16 16 16 16 0 0 1-16-16 16 16 0 0 1 16-16zm-352 7h48v18H64v-18zm80 0h48v18h-48v-18zm80 0h48v18h-48v-18zm-119 66v30h302v-30H105zm-64 48v78h430v-78H41zm254 23h18v32h-18v-32zm121 0a16 16 0 0 1 16 16 16 16 0 0 1-16 16 16 16 0 0 1-16-16 16 16 0 0 1 16-16zm-352 7h48v18H64v-18zm80 0h48v18h-48v-18zm80 0h48v18h-48v-18zm13 66v30h38v-30h-38zM25 457v30h130.2l20-30H25zm171.8 0l-20 30h158.4l-20-30H196.8zm140 0l20 30H487v-30H336.8z"
                    />
                  </svg>
                </div>
              </span>
            </li>
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/8"
                onClick={[Function]}
              >
                Protocols
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.5 11a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zM3 10.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
                    />
                    <path
                      d="M16 11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V9.51c0-.418.105-.83.305-1.197l2.472-4.531A1.5 1.5 0 0 1 4.094 3h7.812a1.5 1.5 0 0 1 1.317.782l2.472 4.53c.2.368.305.78.305 1.198V11zM3.655 4.26 1.592 8.043C1.724 8.014 1.86 8 2 8h12c.14 0 .276.014.408.042L12.345 4.26a.5.5 0 0 0-.439-.26H4.094a.5.5 0 0 0-.44.26zM1 10v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-1a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1z"
                    />
                  </svg>
                </div>
              </span>
            </li>
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/9"
                onClick={[Function]}
              >
                Request - Response
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 12 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11 11.28V5c-.03-.78-.34-1.47-.94-2.06C9.46 2.35 8.78 2.03 8 2H7V0L4 3l3 3V4h1c.27.02.48.11.69.31.21.2.3.42.31.69v6.28A1.993 1.993 0 0 0 10 15a1.993 1.993 0 0 0 1-3.72zm-1 2.92c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zM4 3c0-1.11-.89-2-2-2a1.993 1.993 0 0 0-1 3.72v6.56A1.993 1.993 0 0 0 2 15a1.993 1.993 0 0 0 1-3.72V4.72c.59-.34 1-.98 1-1.72zm-.8 10c0 .66-.55 1.2-1.2 1.2-.65 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
              </span>
            </li>
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/10"
                onClick={[Function]}
              >
                Firewall
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"
                    />
                  </svg>
                </div>
              </span>
            </li>
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/11"
                onClick={[Function]}
              >
                Proxy - VPN
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M22 4v-.5a2.5 2.5 0 00-5 0V4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h5c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-.8 0h-3.4v-.5c0-.94.76-1.7 1.7-1.7s1.7.76 1.7 1.7V4zm-2.28 8c.04.33.08.66.08 1 0 2.08-.8 3.97-2.1 5.39-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H7v-2h2c.55 0 1-.45 1-1V8h2c1.1 0 2-.9 2-2V3.46c-.95-.3-1.95-.46-3-.46C5.48 3 1 7.48 1 13s4.48 10 10 10 10-4.48 10-10c0-.34-.02-.67-.05-1h-2.03zM10 20.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L8 16v1c0 1.1.9 2 2 2v1.93z"
                    />
                  </svg>
                </div>
              </span>
            </li>
            <li
              className="li--right"
            >
              <a
                className="link--tagvoletr"
                href="/chatcomputer/12"
                onClick={[Function]}
              >
                Cyber-Security
              </a>
              <span
                className="spanli--right"
              >
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M255.95 19.2c-58.685 0-101.737 17.664-132.97 45.68 48.263 68.21 113.714 107.422 171.94 118.15 32.58 6 62.737 3.08 86.443-8.014 23.35-10.928 40.7-29.45 49.282-56.862-5.45-10.763-11.76-20.916-18.997-30.29-31.994-41.443-81.43-68.663-155.7-68.663zM109.587 78.298c-3.422 3.823-6.677 7.784-9.764 11.875-30.746 40.752-44.657 94.833-45.63 147.937 58.72 26.42 90.817 62.647 101.806 101.417 30.31 19.97 69.622 29.4 108.22 27.975 33.805-1.247 66.84-10.815 92.688-27.922 10.205-38.25 42.34-73.28 100.81-101.193-.54-33.675-5.868-66.638-16.704-96.28-10.685 20.984-27.018 36.954-46.848 47.395 5.5 17.523 2.04 35.76-6.05 50.85-8.78 16.38-22.906 29.666-39.145 36.173-16.24 6.508-35.77 5.343-50.11-8.22-13.924-13.172-22.515-35.957-24.258-70.71-58.037-15.36-118.86-55.217-165.014-119.298zm41.916 97.803c5.71 20.964 31.71 36.888 63.072 36.888 6.97 0 13.348-.932 19.635-2.38.038.598 0 1.183 0 1.785 0 24.497-23.654 44.62-52.956 44.62-29.302 0-52.96-20.125-52.96-44.62 0-15.31 9.09-28.315 23.208-36.29l.002-.003zm108.422 74.107c14.6 29.094 23.808 58.187 31.467 87.28-20.978-7.523-41.956-6.637-62.936 0 5.666-29.093 17.082-58.186 31.47-87.28zm93.416 113.254c-9.875 5.25-20.36 9.583-31.248 13.017v44.47c13.1-4.626 25.368-10.682 36.3-18.12-3.742-13.045-5.556-26.223-5.052-39.366zm-193.162.224c.912 13.586-.507 27.122-3.846 40.312 10.74 7.033 22.603 12.742 35.156 17.123v-44.5c-10.862-3.4-21.366-7.702-31.31-12.936zm143.226 17.71c-12.18 2.616-24.69 4.192-37.27 4.723v45.545c12.66-.585 25.197-2.337 37.27-5.217v-45.052zM364.852 421c-28.772 18.386-64.12 28.102-99.942 29.424-40.16 1.482-81.158-7.587-114.527-28.06-4.88 12.362-11.358 24.27-19.074 35.445 22.273 21.468 70.715 35.49 121.31 36.042 50.88.553 103.302-12.087 132.718-36.016-8.24-11.97-15.18-24.302-20.486-36.836z"
                    />
                  </svg>
                </div>
              </span>
            </li>
          </section>
        </div>
      </div>
    </div>
    <div>
      <div
        className="volet--L2"
      >
        <div
          className="subvolet--L2"
        >
          <button
            className="btn--volet"
            onClick={[Function]}
          >
            X
          </button>
          <p>
            Private Chat
          </p>
          <span
            className="span"
          >
            <svg
              fill="currentColor"
              height={64}
              stroke="currentColor"
              strokeWidth="0"
              style={
                {
                  "color": undefined,
                }
              }
              viewBox="0 0 16 16"
              width={64}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
              />
            </svg>
          </span>
          <div
            className="form--search"
          >
            <input
              className="search--input"
              onChange={[Function]}
              placeholder="Search by firstname"
              type="text"
              value={[]}
            />
            <button
              className="btn--search"
              onClick={[Function]}
            >
              Enter
            </button>
          </div>
          <section
            className="section--voletl"
          />
        </div>
      </div>
    </div>
    <div
      className="maintitle"
    >
      <h1
        className="main--h1"
      >
        Chat-Society
      </h1>
      <h2
        className="main--h2"
      >
        Login and Chat !
      </h2>
      <h4
        className="main--h4"
      >
        (Only for Stack-Society Members)
      </h4>
    </div>
    <div
      className="master--maincomp"
    >
      <div
        className="bg--colormaincomp"
      >
        <h2
          className="h2--maincomp"
        >
          All Members : 
          <span
            className="span--lengthuser"
          >
            0
          </span>
        </h2>
        <h3
          className="h3--maincomp"
        >
          Users online (connected) : 
          <span
            style={
              {
                "color": "pink",
              }
            }
          >
            0
          </span>
        </h3>
        <div />
      </div>
    </div>
    <div
      className="div--navfooter"
    >
      <nav
        className="navbar--nav"
      >
        <ul
          className="navbar--ul"
        >
          <li
            className="navbar--li"
          >
            Contact
          </li>
          <li
            className="navbar--li"
          >
            Info
          </li>
          <li
            className="navbar--li"
          >
            Sponsors
          </li>
        </ul>
      </nav>
    </div>
  </div>
</div>
`;

exports[`MatchSnapShot test Login 1`] = `
<div>
  <div
    className="div--headernav"
    data-testid="testId"
  >
    <nav
      className="navbar--nav"
    >
      <div
        className="div--imgnavbar"
      >
        <img
          alt="no-img-navbar"
          className="img--koala"
          height="70px"
          src="/src/assets/logo/koala_tree.png"
          width="65px"
        />
      </div>
      <ul
        className="ul--navbar"
      >
        <li>
          <a
            className="link--tagnav"
            data-testid="firstLink"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="secondlink"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="thirdlink"
            href="/online"
            onClick={[Function]}
          >
            Online
          </a>
        </li>
      </ul>
      <div
        className="div--userloginnavbar"
      >
        <div
          className="div--userplace"
        >
          <span
            className="span--usrnavbar"
          >
            ↦
          </span>
        </div>
        <div
          className="div--login"
        >
          <span
            className="span--navbarlogin"
          >
            <a
              className="link--logout"
              data-testid="linkLogout"
              href="/login"
              onClick={[Function]}
            >
              Logout
            </a>
          </span>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="bg--loginimg"
    data-testid="logintest"
  >
    <div
      className="zoom--img"
    >
      <img
        alt="/src/assets/background/circle.jpg"
        className="img--login"
        height="100%"
        src="/src/assets/background/circle.jpg"
        width="100%"
      />
    </div>
    <div
      className="div--submit"
    >
      <form
        className="submit"
        data-testid="formlog"
        onSubmit={[Function]}
        placeholder="lastname"
      >
        <h1
          className="title--framelogin"
        >
          Login
        </h1>
        <div
          className="form-group"
        >
          <div
            className="error--message"
          >
            Not connected!
          </div>
        </div>
        <label
          className="lbl--login"
          htmlFor="username"
        >
          Username
        </label>
        <input
          autoComplete="off"
          className="input--login"
          name="username"
          onChange={[Function]}
          placeholder="username"
          required={true}
          type="text"
          value=""
        />
        <label
          className="lbl--login"
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="input--login"
          name="password"
          onChange={[Function]}
          placeholder="password"
          required={true}
          type="password"
          value=""
        />
        <button
          className="btn--submitlogin"
          type="submit"
        >
          Enter
        </button>
        <p
          className="p--loginframe"
        >
          <a
            className="link--subscribe"
            data-testid="linktosub"
            href="/subscribe"
            onClick={[Function]}
          >
            Subscribe
          </a>
        </p>
      </form>
    </div>
  </div>
</div>
`;

exports[`MatchSnapShot test NavBar 1`] = `
<div
  className="div--headernav"
  data-testid="testId"
>
  <nav
    className="navbar--nav"
  >
    <div
      className="div--imgnavbar"
    >
      <img
        alt="no-img-navbar"
        className="img--koala"
        height="70px"
        src="/src/assets/logo/koala_tree.png"
        width="65px"
      />
    </div>
    <ul
      className="ul--navbar"
    >
      <li>
        <a
          className="link--tagnav"
          data-testid="firstLink"
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </li>
      <li>
        <a
          className="link--tagnav"
          data-testid="secondlink"
          href="/profile"
          onClick={[Function]}
        >
          Profile
        </a>
      </li>
      <li>
        <a
          className="link--tagnav"
          data-testid="thirdlink"
          href="/online"
          onClick={[Function]}
        >
          Online
        </a>
      </li>
    </ul>
    <div
      className="div--userloginnavbar"
    >
      <div
        className="div--userplace"
      >
        <span
          className="span--usrnavbar"
        >
          ↦
        </span>
      </div>
      <div
        className="div--login"
      >
        <span
          className="span--navbarlogin"
        >
          <a
            className="link--logout"
            data-testid="linkLogout"
            href="/login"
            onClick={[Function]}
          >
            Logout
          </a>
        </span>
      </div>
    </div>
  </nav>
</div>
`;

exports[`MatchSnapShot test Online 1`] = `
<div>
  <div
    className="div--headernav"
    data-testid="testId"
  >
    <nav
      className="navbar--nav"
    >
      <div
        className="div--imgnavbar"
      >
        <img
          alt="no-img-navbar"
          className="img--koala"
          height="70px"
          src="/src/assets/logo/koala_tree.png"
          width="65px"
        />
      </div>
      <ul
        className="ul--navbar"
      >
        <li>
          <a
            className="link--tagnav"
            data-testid="firstLink"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="secondlink"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="thirdlink"
            href="/online"
            onClick={[Function]}
          >
            Online
          </a>
        </li>
      </ul>
      <div
        className="div--userloginnavbar"
      >
        <div
          className="div--userplace"
        >
          <span
            className="span--usrnavbar"
          >
            ↦
          </span>
        </div>
        <div
          className="div--login"
        >
          <span
            className="span--navbarlogin"
          >
            <a
              className="link--logout"
              data-testid="linkLogout"
              href="/login"
              onClick={[Function]}
            >
              Logout
            </a>
          </span>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`MatchSnapShot test PageNotFound 1`] = `
<div>
  <div
    className="div--headernav"
    data-testid="testId"
  >
    <nav
      className="navbar--nav"
    >
      <div
        className="div--imgnavbar"
      >
        <img
          alt="no-img-navbar"
          className="img--koala"
          height="70px"
          src="/src/assets/logo/koala_tree.png"
          width="65px"
        />
      </div>
      <ul
        className="ul--navbar"
      >
        <li>
          <a
            className="link--tagnav"
            data-testid="firstLink"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="secondlink"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="thirdlink"
            href="/online"
            onClick={[Function]}
          >
            Online
          </a>
        </li>
      </ul>
      <div
        className="div--userloginnavbar"
      >
        <div
          className="div--userplace"
        >
          <span
            className="span--usrnavbar"
          >
            ↦
          </span>
        </div>
        <div
          className="div--login"
        >
          <span
            className="span--navbarlogin"
          >
            <a
              className="link--logout"
              data-testid="linkLogout"
              href="/login"
              onClick={[Function]}
            >
              Logout
            </a>
          </span>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`MatchSnapShot test PrivateMessage 1`] = `
<div>
  <div
    className="div--headernav"
    data-testid="testId"
  >
    <nav
      className="navbar--nav"
    >
      <div
        className="div--imgnavbar"
      >
        <img
          alt="no-img-navbar"
          className="img--koala"
          height="70px"
          src="/src/assets/logo/koala_tree.png"
          width="65px"
        />
      </div>
      <ul
        className="ul--navbar"
      >
        <li>
          <a
            className="link--tagnav"
            data-testid="firstLink"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="secondlink"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="thirdlink"
            href="/online"
            onClick={[Function]}
          >
            Online
          </a>
        </li>
      </ul>
      <div
        className="div--userloginnavbar"
      >
        <div
          className="div--userplace"
        >
          <span
            className="span--usrnavbar"
          >
            ↦
          </span>
        </div>
        <div
          className="div--login"
        >
          <span
            className="span--navbarlogin"
          >
            <a
              className="link--logout"
              data-testid="linkLogout"
              href="/login"
              onClick={[Function]}
            >
              Logout
            </a>
          </span>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="bg--loginimg"
    data-testid="logintest"
  >
    <div
      className="zoom--img"
    >
      <img
        alt="/src/assets/background/circle.jpg"
        className="img--login"
        height="100%"
        src="/src/assets/background/circle.jpg"
        width="100%"
      />
    </div>
    <div
      className="div--submit"
    >
      <form
        className="submit"
        data-testid="formlog"
        onSubmit={[Function]}
        placeholder="lastname"
      >
        <h1
          className="title--framelogin"
        >
          Login
        </h1>
        <div
          className="form-group"
        >
          <div
            className="error--message"
          >
            Not connected!
          </div>
        </div>
        <label
          className="lbl--login"
          htmlFor="username"
        >
          Username
        </label>
        <input
          autoComplete="off"
          className="input--login"
          name="username"
          onChange={[Function]}
          placeholder="username"
          required={true}
          type="text"
          value=""
        />
        <label
          className="lbl--login"
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="input--login"
          name="password"
          onChange={[Function]}
          placeholder="password"
          required={true}
          type="password"
          value=""
        />
        <button
          className="btn--submitlogin"
          type="submit"
        >
          Enter
        </button>
        <p
          className="p--loginframe"
        >
          <a
            className="link--subscribe"
            data-testid="linktosub"
            href="/subscribe"
            onClick={[Function]}
          >
            Subscribe
          </a>
        </p>
      </form>
    </div>
  </div>
</div>
`;

exports[`MatchSnapShot test Profile 1`] = `
<div>
  <div
    className="div--headernav"
    data-testid="testId"
  >
    <nav
      className="navbar--nav"
    >
      <div
        className="div--imgnavbar"
      >
        <img
          alt="no-img-navbar"
          className="img--koala"
          height="70px"
          src="/src/assets/logo/koala_tree.png"
          width="65px"
        />
      </div>
      <ul
        className="ul--navbar"
      >
        <li>
          <a
            className="link--tagnav"
            data-testid="firstLink"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="secondlink"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="thirdlink"
            href="/online"
            onClick={[Function]}
          >
            Online
          </a>
        </li>
      </ul>
      <div
        className="div--userloginnavbar"
      >
        <div
          className="div--userplace"
        >
          <span
            className="span--usrnavbar"
          >
            ↦
          </span>
        </div>
        <div
          className="div--login"
        >
          <span
            className="span--navbarlogin"
          >
            <a
              className="link--logout"
              data-testid="linkLogout"
              href="/login"
              onClick={[Function]}
            >
              Logout
            </a>
          </span>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`MatchSnapShot test Subscribe 1`] = `
<div>
  <div
    className="div--headernav"
    data-testid="testId"
  >
    <nav
      className="navbar--nav"
    >
      <div
        className="div--imgnavbar"
      >
        <img
          alt="no-img-navbar"
          className="img--koala"
          height="70px"
          src="/src/assets/logo/koala_tree.png"
          width="65px"
        />
      </div>
      <ul
        className="ul--navbar"
      >
        <li>
          <a
            className="link--tagnav"
            data-testid="firstLink"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="secondlink"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </li>
        <li>
          <a
            className="link--tagnav"
            data-testid="thirdlink"
            href="/online"
            onClick={[Function]}
          >
            Online
          </a>
        </li>
      </ul>
      <div
        className="div--userloginnavbar"
      >
        <div
          className="div--userplace"
        >
          <span
            className="span--usrnavbar"
          >
            ↦
          </span>
        </div>
        <div
          className="div--login"
        >
          <span
            className="span--navbarlogin"
          >
            <a
              className="link--logout"
              data-testid="linkLogout"
              href="/login"
              onClick={[Function]}
            >
              Logout
            </a>
          </span>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="subscribe"
    data-testid="subtest"
  >
    <form
      autoComplete="off"
      className="form--subscribe"
      data-testid="formsub"
      onSubmit={[Function]}
    >
      <div
        className="div--subscribe"
      >
        <h1
          className="title--framesub"
        >
          Subscribe
        </h1>
        <label
          className="lbl--sub"
          htmlFor="sub"
        >
          Firstname
        </label>
        <input
          className="input--sub"
          name="firstName"
          onChange={[Function]}
          placeholder="firstname"
          required={true}
          type="text"
          value=""
        />
        <label
          className="lbl--sub"
          htmlFor="sub"
        >
          Lastname
        </label>
        <input
          className="input--sub"
          name="lastName"
          onChange={[Function]}
          placeholder="lastname"
          required={true}
          type="text"
          value=""
        />
        <label
          className="lbl--sub"
          htmlFor="sub"
        >
          Password
        </label>
        <input
          className="input--sub"
          name="password"
          onChange={[Function]}
          placeholder="password"
          required={true}
          type="password"
          value=""
        />
        <label
          className="lbl--sub"
          htmlFor="sub"
        >
          Age
        </label>
        <input
          className="input--sub"
          max="120"
          min="20"
          name="age"
          onChange={[Function]}
          placeholder="age"
          required={true}
          type="number"
          value={20}
        />
        <label
          className="lbl--sub"
          htmlFor="sub"
        >
          Email
        </label>
        <input
          className="input--sub"
          name="email"
          onChange={[Function]}
          placeholder="email"
          required={true}
          type="email"
          value=""
        />
        <label
          className="lbl--sub"
          htmlFor="sub"
        >
          Location
        </label>
        <input
          className="input--sub"
          name="location"
          onChange={[Function]}
          placeholder="location"
          required={true}
          type="text"
          value=""
        />
        <div
          className="div--subselect"
        >
          <label
            className="lbl--sub"
            htmlFor="gender"
          >
            Gender :
          </label>
          <select
            className="select--sub"
            id="gender"
            name="gender"
            onChange={[Function]}
            value="Male"
          >
            <option
              name="gender"
              value="Male"
            >
              Male
            </option>
            <option
              name="gender"
              value="Female"
            >
              Female
            </option>
          </select>
        </div>
      </div>
      <button
        className="btn--sub"
        type="submit"
      >
        Signup
      </button>
    </form>
  </div>
</div>
`;
